Revert "Merge branch 'feature/feed/be' into 'develop'"
This reverts merge request !16

--- a/code/backend/src/main/resources/application.properties
+++ b/code/backend/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.port=9999
 #spring.mvc.view.suffix=.jsp
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/ssafy-sk?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://i3b301.p.ssafy.io:3306/ssafy-sk?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=soddnehd1
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafy-sk?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://i3b301.p.ssafy.io:3306/ssafy-sk?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
 
 #mapper location settings
 #mybatis.config-location=classpath:config/mybatis-config.xml
